# PO1_Cpp_2021

PO_1_LAB10_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB10_LIBUCHA_PIOTR/include/: Data.h  Sum.h  Table.h
PO_1_LAB10_LIBUCHA_PIOTR/src/: Data.cpp  Sum.cpp  Table.cpp
PO_1_LAB11_LIBUCHA_PIOTR/: CMakeLists.txt  main.cpp
PO_1_LAB11_LIBUCHA_PIOTR/include/: Variable.h
PO_1_LAB11_LIBUCHA_PIOTR/src/: Variable.cpp
PO_1_LAB12_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB12_LIBUCHA_PIOTR/include/: PairOfNumbers.h  RangeArray.h
PO_1_LAB13_LIBUCHA_PIOTR/: CMakeLists.txt  main.cpp
PO_1_LAB13_LIBUCHA_PIOTR/include/: Quantity.h
PO_1_LAB13_LIBUCHA_PIOTR/src/: Quantity.cpp
PO_1_LAB14_LIBUCHA_PIOTR/: CMakeLists.txt  main.cpp
PO_1_LAB14_LIBUCHA_PIOTR/include/: Plansza.hpp  Pozycja.hpp  Statek.hpp
PO_1_LAB14_LIBUCHA_PIOTR/src/: Plansza.cpp  Pozycja.cpp  Statek.cpp
PO_1_LAB2_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB2_LIBUCHA_PIOTR/include/: V.h
PO_1_LAB2_LIBUCHA_PIOTR/src/: V.cpp
PO_1_LAB3_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB3_LIBUCHA_PIOTR/include/: FancyText.h
PO_1_LAB3_LIBUCHA_PIOTR/src/: FancyText.cpp
PO_1_LAB4_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB4_LIBUCHA_PIOTR/include/: Funkcje.h  ZlozenieFunkcji.h
PO_1_LAB4_LIBUCHA_PIOTR/src/: Funkcje.cpp  ZlozenieFunkcji.cpp
PO_1_LAB5_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB5_LIBUCHA_PIOTR/include/: Figura.h  KontenerFigur.h  Prostokat.h  Wierzcholek.h
PO_1_LAB5_LIBUCHA_PIOTR/src/: Figura.cpp  KontenerFigur.cpp  Prostokat.cpp  Wierzcholek.cpp
PO_1_LAB6_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB6_LIBUCHA_PIOTR/include/: Primitive.h  Product.h  Ratio.h  Sum.h
PO_1_LAB6_LIBUCHA_PIOTR/src/: Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
PO_1_LAB7_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB7_LIBUCHA_PIOTR/buil/: Makefile
PO_1_LAB7_LIBUCHA_PIOTR/include/: Dir.h  File.h  FileSystemObject.hpp
PO_1_LAB7_LIBUCHA_PIOTR/src/: Dir.cpp  File.cpp  FileSystemObject.cpp
PO_1_LAB8_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB8_LIBUCHA_PIOTR/include/: GameObj.h
PO_1_LAB8_LIBUCHA_PIOTR/src/: GameObj.cpp
PO_1_LAB9_LIBUCHA_PIOTR/: CMakeLists.txt
PO_1_LAB9_LIBUCHA_PIOTR/include/: Point2D.h
PO_1_LAB9_LIBUCHA_PIOTR/src/: Point2D.cpp
